<resources>
    <string name="app_name">PITE BMS</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="title_activity_login">云电池登陆</string>
    <string name="login_name">用户名&#160;&#160;</string>
    <string name="login_pwd"> 密&#160;&#160;&#160;&#160;码&#160;&#160;</string>
    <string name="login_edt_name">请输入用户名</string>
    <string name="login_edt_pwd">请输入密码</string>
    <string name="save_pwd">记住密码</string>
    <string name="login_btn">登&#160;&#160;&#160;&#160;陆</string>
    <string name="Battery_Information">站信息</string>
    <string name="Battery_pack_Information">电池组信息</string>
    <string name="Battery_test_type">测试类型</string>
    <string name="Histogram_btn">直方图</string>
    <string name="Thrend_btn">趋势图</string>
    <string name="his_data">直方数据分析</string>
    <string name="Trend_data">趋势数据分析</string>
    <string name="Battery_station">&#160;&#160;&#160;&#160;站名:</string>
    <string name="Battery_group">&#160;&#160;&#160;&#160;组名:</string>
    <string name="Battery_type">&#160;&#160;&#160;&#160;类型:</string>
    <string name="Battery_min_R">标准内阻:</string>
    <string name="Battery_max_R">最大内阻:</string>
    <string name="Battery_min_U">最小电压:</string>
    <string name="Battery_group_U">组电压:</string>
    <string name="Battery_u_top_limit">电压上限:</string>
    <string name="Battery_u_limit">电压下限:</string>
    <string name="Battery_temper_top_limit">温度上限:</string>
    <string name="Battery_temper_limit">温度下限:</string>
    <string name="Battery_r_relpace">内阻更换:</string>
    <string name="Battery_r_wring">内阻报警:</string>
    <string name="Battery_group_current">组电流:</string>
    <string name="Battery_status">电池状态:</string>
    <string name="Battery_statuss">电池状态</string>
    <string name="Battery_time1">测试时间:</string>
    <string name="Battery_gaps">时间间隔:</string>
    <string name="Battery_look">查看</string>
    <string name="Battery_station_name">三水南站</string>
    <string name="Battery_group_name">第一组</string>
    <string name="Battery_type_name">480V 100AH</string>
    <string name="Battery_min_R_name">20.0 mΩ</string>
    <string name="Battery_max_R_name">50.0 mΩ</string>
    <string name="Battery_min_U_name">2#51.4V</string>
    <string name="Battery_group_u_name">270.9V</string>
    <string name="Battery_group_current_name">10.3I</string>
    <string name="Battery_status_name">良好</string>
    <string name="Battery_postion">位置监测</string>
    <string name="Battery_warning">故障信息</string>
    <string name="pite_version">版本号:</string>
    <string name="pite_battery_UI">总电压(V)_</string>
    <string name="pite_battery_UI2">总电压(V)</string>
    <string name="pite_battery_UIS">总电流(A)</string>
    <string name="pite_battery_V">单体电压(V)</string>
    <string name="pite_battery_R">单体内阻(mΩ)</string>
    <string name="pite_battery_T">单体温度(℃)</string>
    <string name="pite_battery_C">单体容量(%)</string>
    <string name="pite_battery_R2">单体极化内阻(mΩ)</string>
    <string name="pite_battery_F">单体极化电容(F)</string>
    <string name="pite_battery_num">电池号:</string>
    <string name="pite_battery_charge">充电状态:</string>
    <string name="pite_battery_charges">充电状态</string>
    <string name="pite_tongbu">同步参数</string>
    <string name="pite_tongbu_cmd">同步命令已发送,请等待!!</string>
    <string name="pite_gaps_cmd">时间命令已发送,请等待!!</string>
    <string name="pite_gaps_send_cmd">命令发送失败</string>
    <string name="pite_gaps_cmd_suec">设置成功</string>
    <string name="pite_gaps_cmd_fails">设置失败</string>
    <string name="pite_chongqi">重启设备</string>
    <string name="pite_chongqi_cmd">重启命令已发送,请等待!!</string>
    <string name="OK">登陆成功</string>
    <string name="SET_OK">设置成功</string>
    <string name="SET_FAIL">设置失败</string>
    <string name="FAIL">登陆失败</string>
    <string name="SEND_LONG_TIME">发送超时</string>
    <string name="Exception">异常</string>
    <string name="Change">更换</string>
    <string name="medium">中等</string>
    <string name="cross">√</string>
    <string name="checkmark">X</string>
    <string name="good">良好</string>
    <string name="ok_exit">确定要退出吗？</string>
    <string name="no_time">请选择时间</string>
    <string name="yes">确定</string>
    <string name="no">取消</string>
    <string name="ba_station">站名</string>
    <string name="ba_operate">操作</string>
    <string name="ba_group">组名</string>
    <string name="ba_type">类型</string>
    <string name="ba_time">时间</string>
    <string name="ba_event">事件</string>
    <string name="year">检测日期</string>
    <string name="language_change">语言选择</string>
    <string name="title_activity_packet">电池分组信息</string>
    <string name="title_activity_test_type">测试类型</string>
    <string name="diagnose">检测报告</string>
    <string name="xunjian">电压监测</string>
    <string name="sydl">剩余电量:</string>
    <string name="title_activity_time_monitor">内阻监测</string>
    <string name="Battery_manufacturers">电池厂家:</string>
    <string name="Battery_type2">电池类型:</string>
    <string name="Internal_standard">内阻标准:</string>
    <string name="Battery_num">电池数量:</string>
    <string name="total_current">总电流:</string>
    <string name="total_voltage">总电压:</string>
    <string name="R_max">内阻偏大前六节</string>
    <string name="R_max2">SOC最小前六节</string>
    <string name="U_High">电压偏高前三节</string>
    <string name="U_low">电压偏低前三节</string>
    <string name="conclusion">结论：</string>
    <string name="U_average">电压均值:</string>
    <string name="U_mean">电压均差标准：</string>
    <string name="R_mean">标准内阻均差比：</string>
    <string name="R_average">内阻均值:</string>
    <string name="DataAnalysis">直方图</string>
    <string name="voltageAnalysisAD">电压均差分析</string>
    <string name="resistanceAnalysisAD">电池内阻分析</string>
    <string name="resqustFails">请求失败</string>
    <string name="title_activity_postion">PostionActivity</string>
    <string name="hello_world">PCS</string>
    <string name="time">时间:</string>
    <string name="title_activity_waring">WaringActivity</string>
    <string name="title_activity_sliding_menu">SlidingMenuActivity</string>
    <string name="number">No.</string>
    <string name="AV">△U(mV)</string>
    <string name="AVB">δ(%)</string>
    <string name="update">是否需要更新版本?</string>
    <string name="not">"--"</string>
    <string name="corporate_name">"公司名称:"</string>
    <string name="telnum">"电话:"</string>
    <string name="name">"电池云管理系统"</string>
    <string name="loading">"开始下载"</string>
    <string name="Load_in">"加载中...."</string>
    <string name="SOC">"单体容量(SOC%)"</string>
    <string name="SOCC">"SOC(%)"</string>
    <string name="Dialog">是否选择确定?</string>
    <string name="pcs">PCS</string>
    <string name="StoredEnergy">储能实时信息</string>
    <string name="title_activity_stored_energyactivity_main">MainActivity</string>
    <string name="string1">运行状态</string>
    <string name="string2">累计输入总电量</string>
    <string name="string3">kWh</string>
    <string name="string4">当前电价</string>
    <string name="string5">累计输入总电费</string>
    <string name="string6">元</string>
    <string name="string7">输入功率</string>
    <string name="string8">kW</string>
    <string name="string9">累计输出总电量</string>
    <string name="string10">kWh</string>
    <string name="string11">输出功率</string>
    <string name="string15">电池电压</string>
    <string name="string16">V</string>
    <string name="string17">累计收益</string>
    <string name="string19">电池电流</string>
    <string name="string20">A</string>
    <string name="string21">电池数据</string>
    <string name="string22">电池电压(V)</string>
    <string name="string23">电池电流(A)</string>
    <string name="string24">温度(℃)</string>
    <string name="string25">状态</string>
    <string name="string73">电池运行状态</string>
    <string name="string74">电池性能状态</string>
    <string name="string75">电池持续放电时间</string>
    <string name="string76">电池剩余供电时间</string>
    <string name="string77">电池剩余容量</string>
    <string name="string78">放电电流</string>
    <string name="string26">相电压(V)</string>
    <string name="string27">频率(Hz)</string>
    <string name="string28">U相</string>
    <string name="string29">V相</string>
    <string name="string30">W相</string>
    <string name="string69">电流(A)</string>
    <string name="string70">有功功率(P)</string>
    <string name="string71">视在功率(P)</string>
    <string name="string72">功率因数</string>
    <string name="string31">负载(%)</string>
    <string name="string32">P(kW)</string>
    <string name="string33">S(kVA)</string>
    <string name="string34">PF值</string>
    <string name="string35">相电流(A)</string>
    <string name="string36">直通</string>
    <string name="string37">充电</string>
    <string name="string38">放电</string>
    <string name="string39">单并机状态</string>
    <string name="string40">输入相序</string>
    <string name="string41">旁路状态</string>
    <string name="string42">整流器状态</string>
    <string name="string43">逆变器开关状态</string>
    <string name="string44">逆变器运行状态</string>
    <string name="string45">UPS温度状态</string>
    <string name="string46">电池极性状态</string>
    <string name="string47">风机状态</string>
    <string name="string48">并机线状态</string>
    <string name="string49">保险丝状态</string>
    <string name="string50">UPS通讯故障</string>
    <string name="string51">电池状态</string>
    <string name="string52">负载状态</string>
    <string name="string53">输出状态</string>
    <string name="string54">机内温度</string>
    <string name="string55">并机</string>
    <string name="string56">单机</string>
    <string name="string57">正常</string>
    <string name="string58">异常</string>
    <string name="string59">欠压</string>
    <string name="string60">过压</string>
    <string name="string61">故障</string>
    <string name="string62">告警</string>
    <string name="string63">过载</string>
    <string name="string64">旁路</string>
    <string name="string65">逆变</string>
    <string name="string66">峰</string>
    <string name="string67">平</string>
    <string name="string68">谷</string>
    <string name="string100">未知</string>
    <string name="string101">电池告警信息</string>
    <string name="string102">累计输出总电费</string>
    <string name="string103">处理</string>
    <string name="string104">是否处理该事件？</string>
    <string name="string105">批量处理</string>
    <string name="string106">全选</string>
    <string name="string107">请至少选择一个处理条目！</string>
    <string name="Load_end">--已完成加载！--</string>
    <string name="Real_time_Info">实时信息</string>
    <string name="Trend_datas">趋势数据</string>
    <string name="Stored_daily">日报</string>
    <string name="Stored_monthly">月报</string>
    <string name="date">日期</string>
    <string name="string120">Ua(V)</string>
    <string name="string121">Ub(V)</string>
    <string name="string122">Uc(V)</string>
    <string name="string123">Ia(A)</string>
    <string name="string124">Ib(A)</string>
    <string name="string125">Ic(A)</string>
    <string name="string126">La(%)</string>
    <string name="string127">Lb(%)</string>
    <string name="string128">Lc(%)</string>
    <string name="string129">Pa(kW)</string>
    <string name="string130">PbkW)</string>
    <string name="string131">Pc(kW)</string>
    <string name="string132">Sa(kVA)</string>
    <string name="string133">Sb(kVA)</string>
    <string name="string134">Sc(kVA)</string>
    <string name="string135">Pfa</string>
    <string name="string136">Pfb</string>
    <string name="string137">Pfc</string>
    <string name="string138">累计收益</string>
    <string name="title_activity_mianmain">MIANMainActivity</string>
    <string name="title_activity_loadmain">LOADMainActivity</string>
    <string name="load_title">系统输出</string>
    <string name="state_title">工作状态</string>
    <string name="mian_title">市电输入</string>
    <string name="byp_title">旁路输入</string>
    <string name="title_activity_bypmain">BYPMainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_statemain">STATEMainActivity</string>
    <string name="title_activity_langues">LanguesActivity</string>
</resources>