<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/enerfm03_year"
        android:layout_width="60dp"
        android:layout_height="30dp"
        android:gravity="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal" >

        <TextView
            style="@style/testtitlestyle"
            android:layout_width="60dp"
            android:background="@drawable/title_cell"
            android:text="@string/date" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@drawable/line" />

        <TextView
            style="@style/testtitlestyle"
            android:layout_weight="1"
            android:background="@drawable/title_cell"
            android:text="@string/string2" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@drawable/line" />

        <TextView
            style="@style/testtitlestyle"
            android:layout_weight="1"
            android:background="@drawable/title_cell"
            android:text="@string/string5" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@drawable/line" />

        <TextView
            style="@style/testtitlestyle"
            android:layout_weight="1"
            android:background="@drawable/title_cell"
            android:text="@string/string9" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@drawable/line" />

        <TextView
            style="@style/testtitlestyle"
            android:layout_weight="1"
            android:background="@drawable/title_cell"
            android:text="@string/string102" />
    </LinearLayout>

    <ListView
        android:id="@+id/energfm03_lv"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
    </ListView>

</LinearLayout>