<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/enerfm_year"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:gravity="center" />

        <TextView
            android:id="@+id/enerfm_month"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:gravity="center" />
    </LinearLayout >

    <LinearLayout android:layout_height="30dp"
        android:layout_width="match_parent"
        android:orientation="horizontal">
        <TextView style="@style/testtitlestyle"
            android:text="@string/date"
            android:layout_width="60dp"
            android:background="@drawable/title_cell"/>
        <View android:layout_height="match_parent"
            android:layout_width="1dp"
            android:background="@drawable/line"/>
        <TextView style="@style/testtitlestyle"
            android:text="@string/string2"
            android:layout_weight="1"
            android:background="@drawable/title_cell"/>
        <View android:layout_height="match_parent"
            android:layout_width="1dp"
            android:background="@drawable/line"/>
        <TextView style="@style/testtitlestyle"
            android:text="@string/string5"
            android:layout_weight="1"
            android:background="@drawable/title_cell"/>
        <View android:layout_height="match_parent"
            android:layout_width="1dp"
            android:background="@drawable/line"/>
        <TextView style="@style/testtitlestyle"
            android:text="@string/string9"
            android:layout_weight="1"
            android:background="@drawable/title_cell"/>
        <View android:layout_height="match_parent"
            android:layout_width="1dp"
            android:background="@drawable/line"/>
        <TextView style="@style/testtitlestyle"
            android:text="@string/string102"
            android:layout_weight="1"
            android:background="@drawable/title_cell"/>
    </LinearLayout>

    <ListView
        android:id="@+id/energfm02_lv"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
    </ListView>

</LinearLayout>