<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
        <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         android:orientation="horizontal" >
        <Button 
            android:id="@+id/Real_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/switch_pictrue"
            android:text="@string/Real_time_Info"
            android:textColor="@color/heise"
            android:layout_weight="1"/>
         <Button
             android:id="@+id/Thrend_btn" 
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@drawable/switch_pictrue"
             android:text="@string/Thrend_btn"
             android:textColor="@color/heise"
             android:layout_weight="1"/>
         <Button 
             android:id="@+id/trend_data_btn"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@drawable/switch_pictrue"
             android:text="@string/Trend_datas"
             android:textColor="@color/heise"
             android:layout_weight="1"/>
    </LinearLayout>

</LinearLayout>
